<resources>
    <string name="app_name">VisualizingDataDotGov</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ethnicity_label">Ethnicity</string>
    <string name="year_label">Year</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="show_data_label">Go</string>
    <string name="notificationTitle">VisualizingDataDotGov App</string>
    <string name="notificationMessage">Good morning! Time to check new death data!</string>
</resources>
